# ambilightRepo

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  GPU_VALIDATION_REPORT.txt  LICENSE  README.md  VERSIONING.md  __init__.py  build-installer.cmd  build-installer.sh  build.py  build_windows.py  capture_test.py  capture_test.spec  configuration.yaml  configuration.yaml.tmpon1_4mkn  main.py  pytest.ini  requirements.txt  service_entry.py  test.py  test_config_hotreload.ps1  test_effect_modes.ps1  test_websocket_auth.py  validate_fix.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/DISCUSSION_TEMPLATE/: ideas.yml  q_and_a.yml  show_and_tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  device_support.yml  feature_request.yml
.github/workflows/: build.yml  release.yml
.kiro/specs/readme-documentation-update/: .config.kiro  design.md  requirements.md  tasks.md
ambilight/: __init__.py  _version.py  api_server.py  audio_input.py  auth.py  auto_profile.py  autostart.py  capture.py  color.py  config.py  config_watcher.py  discovery.py  effects_engine.py  events.py  foreground.py  gpu.py  gradient_engine.py  hdr.py  hook_capture.py  led_output.py  logging_setup.py  monitors.py  parent_watchdog.py  paths.py  pipeline.py  pipeline_controller.py  platform_monitor.py  profile_manager.py  smoothing.py  tonemap.py  zones.py
ambilight/devices/: __init__.py  base.py  factory.py  magichome.py  wled.py
ambilight/integrations/: __init__.py  ha_discovery.py  mqtt_bridge.py  secrets_store.py
ambilight/integrations/github/: __init__.py  api.py  health.py  mapper.py  models.py  normalize.py  oauth.py  poller.py  service.py  store.py  taxonomy.py  tunnel.py  webhook.py
ambilight/notifications/: __init__.py  base.py  brand_colors.py  darwin.py  icon_color.py  service.py  windows.py
ambilight/ownership/: __init__.py  coordinator.py  lan_transport.py  mqtt_transport.py
ambilight/service/: __init__.py  __main__.py
docs/: 01_codebase_assessment.md  02_prd.md  03_trd.md  04_refactoring_plan.md  05_electron_architecture.md  06_service_architecture.md  07_migration_plan.md  08_project_structure.md  home-assistant.md  platform__support.md  test_plan.md  wled.md
docs/integrations/: github.md
native/: CMakeLists.txt  README.md
native/capture_host/: CMakeLists.txt  detect.cpp  detect.h  inject.cpp  inject.h  main.cpp  shm_writer.cpp  shm_writer.h
native/graphics_hook/: CMakeLists.txt  capture_util.cpp  capture_util.h  dllmain.cpp  hook_d3d9.cpp  hook_d3d9.h  hook_dxgi.cpp  hook_dxgi.h  hook_vulkan.cpp  hook_vulkan.h  hooklog.cpp  hooklog.h  vmt_hook.cpp  vmt_hook.h
native/shared_memory/: CMakeLists.txt  hook_control.h  shm_protocol.h
native/test_dx11/: CMakeLists.txt  dx11_probe.cpp  dx12_probe.cpp  dx9_probe.cpp
profiles/: gaming.json  movie.json  night.json
scripts/: gen_brand_colors.py  sync-version.mjs
tests/: monitor_info.py  test_audio.py  test_auto_profile.py  test_black_debounce.py  test_brand_colors.py  test_capture.py  test_capture_health.py  test_capture_retarget.py  test_color.py  test_config.py  test_config_notifications.py  test_devices_factory.py  test_discovery.py  test_effects.py  test_flash_overlay.py  test_github_api_hooks.py  test_github_client_id.py  test_github_config.py  test_github_mapper.py  test_github_normalize.py  test_github_oauth.py  test_github_poller_coverage.py  test_github_service.py  test_github_store.py  test_github_taxonomy.py  test_github_tunnel.py  test_github_webhook.py  test_github_webhook_activation.py  test_gradient.py  test_ha_discovery.py  test_hdr.py  test_health.py  test_hook_capture.py  test_led_output.py  test_live_hardware.py  test_monitors.py  test_mqtt_bridge.py  test_multidevice.py  test_notification_icon_color.py  test_notification_service.py  (+7 more)
ui/: .gitignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js
ui/electron/: main.cjs  preload.cjs
ui/installer/: nsis_hooks.nsh
ui/scripts/: gen-icons.mjs
ui/src/: App.jsx  index.css  main.jsx  store.js
ui/src/components/: LineChart.jsx  Toggle.jsx  UpdateBanner.jsx  Wizard.jsx  ZoneEditor.jsx  ZonePreview.jsx  shell.jsx
ui/src/pages/: Dashboard.jsx  Devices.jsx  Diagnostics.jsx  Effects.jsx  Github.jsx  Integrations.jsx  Logs.jsx  Notifications.jsx  Onboarding.jsx  Profiles.jsx  Settings.jsx  Zones.jsx
ui/src/shared/: constants.js  service.js
ui/src/styles/: ds.css  pages.css
